--- a/pages/product.html
+++ b/pages/product.html
@@ -15,7 +15,7 @@
 <body>
     <script src="../scripts/jquery.min.js"></script>
     <script src="../scripts/bootstrap.js"></script>
-    <script src="../scripts/r-script.js"></script>
+    <script src="../scripts/showItem.js"></script>
 
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                 <div class="logo">
-                    <a class="logo-img" href="#"><img src="../images/logo_2.png" alt="" title=""/></a>
+                    <a class="logo-img" href="../pages/index.html"><img src="../images/logo_2.png" alt="" title=""/></a>
                 </div>
             </div>
 
