--- a/pages/productReview.html
+++ b/pages/productReview.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                 <div class="logo">
-                    <a class="logo-img" href="#"><img src="../images/logo_2.png" alt="" title=""/></a>
+                    <a class="logo-img" href="../pages/index.html"><img src="../images/logo_2.png" alt="" title=""/></a>
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
     <div class="footer-push"></div>
 </section>
 
-<script src="../scripts/r-script.js"></script>
+<script src="../scripts/showItem.js"></script>
 <footer class="footer">
     <div class="footer_inner">
         <div class="row">
