add name attr into the form

--- a/pages/phone.html
+++ b/pages/phone.html
@@ -131,7 +131,7 @@
                         <div class="registr-item clearfix">
                             <label for="itemTitle" class="col-lg-5 registr-label">Title</label>
                             <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
-                                <input type="text" class="input-common" id="itemTitle" value=""
+                                <input type="text" class="input-common" id="itemTitle" value="" name="itemTitle"
                                        placeholder="title" autofocus required>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                         <div class="registr-item clearfix">
                             <label for="itemThumbImgUrl" class="col-lg-5 registr-label">Image Url</label>
                             <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
-                                <input type="text" class="input-common" id="itemThumbImgUrl" value=""
+                                <input type="text" class="input-common" id="itemThumbImgUrl" value="" name="itemThumbImgUrl"
                                        placeholder="image Url" required>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                         <div class="registr-item clearfix">
                             <label for="shortDescr" class="col-lg-5 registr-label">Short description</label>
                             <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
-                                <input type="text" class="input-common" id="shortDescr" value=""
+                                <input type="text" class="input-common" id="shortDescr" value="" name="shortDescr"
                                        placeholder="short description" required>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                         <div class="registr-item clearfix">
                             <label for="price" class="col-lg-5 registr-label">Price</label>
                             <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
-                                <input type="text" class="input-common" id="price" value=""
+                                <input type="text" class="input-common" id="price" value="" name="price"
                                        placeholder="price" required>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                         <div class="registr-item clearfix">
                             <label for="birthday" class="col-lg-5 registr-label">Production date</label>
                             <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
-                                <input type="text" class="input-common" id="birthday" value=""
+                                <input type="text" class="input-common" id="birthday" value="" name="birthday"
                                        placeholder="birthday" required>
                             </div>
                         </div>
@@ -181,7 +181,7 @@
                         <div class="registr-item clearfix">
                             <label for="band" class="col-lg-5 registr-label">Band</label>
                             <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
-                                <input type="text" class="input-common" id="band" value="" placeholder="band" required>
+                                <input type="text" class="input-common" id="band" value="" name="band" placeholder="band" required>
                             </div>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
                         <div class="registr-item clearfix">
                             <label for="mobile_type" class="col-lg-5 registr-label">Type</label>
                             <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
-                                <input type="text" class="input-common" id="mobile_type" value="" placeholder="mobile type" required>
+                                <input type="text" class="input-common" id="mobile_type" value="" name="mobile_type" placeholder="mobile type" required>
                             </div>
                         </div>
                     </div>
