--- a/pages/phone.html
+++ b/pages/phone.html
@@ -125,7 +125,7 @@
             <input type="button" value="Show form" id="show-button">
 
             <div id="prompt-form-container">
-                <form id="prompt-form">
+                <form id="prompt-form" method="get">
                     <div class="row row-popup">
                         <!--itemTitle-->
                         <div class="registr-item clearfix">
@@ -161,7 +161,7 @@
                         <div class="registr-item clearfix">
                             <label for="price" class="col-lg-5 registr-label">Price</label>
                             <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
-                                <input type="text" class="input-common" id="price" value="" name="price"
+                                <input type="number" class="input-common" id="price" value="" name="price"
                                        placeholder="price" required>
                             </div>
                         </div>
