--- a/pages/phone.html
+++ b/pages/phone.html
@@ -159,9 +159,11 @@
                     <div class="row row-popup">
                         <!--price-->
                         <div class="registr-item clearfix">
-                            <label for="price" class="col-lg-5 registr-label">Price</label>
+                            <label for="priceMin" class="col-lg-5 registr-label">Price</label>
                             <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
-                                <input type="number" class="input-common" id="price" value="" name="price"
+                                <input type="number" class="input-common" id="priceMin" value="" name="priceMin"
+                                       placeholder="price" required>
+                                <input type="number" class="input-common" id="priceMax" value="" name="priceMax"
                                        placeholder="price" required>
                             </div>
                         </div>
