--- a/pages/phone.html
+++ b/pages/phone.html
@@ -196,6 +196,24 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row row-popup">
+                        <!--mobile_type-->
+                        <div class="registr-item clearfix">
+                            <label for="mobile_type" class="col-lg-5 registr-label">thumbURL</label>
+                            <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
+                                <input type="text" class="input-common" id="thumbURL" value="" name="thumbURL" placeholder="" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row row-popup">
+                        <!--mobile_type-->
+                        <div class="registr-item clearfix">
+                            <label for="mobile_type" class="col-lg-5 registr-label">fullSizeURL</label>
+                            <div class="col-lg-6 col-md-5 col-sm-5 col-xs-5">
+                                <input type="text" class="input-common" id="fullSizeURL" value="" name="fullSizeURL" placeholder="" required>
+                            </div>
+                        </div>
+                    </div>
                     <input type="submit" value="Ok">
                     <input type="button" name="cancel" value="Cancel">
                 </form>
