changes for add to cart functionality

--- a/pages/phone.html
+++ b/pages/phone.html
@@ -67,7 +67,7 @@
                     <div class="col-lg-2">
                         <div class="nav-add-cart-wrap">
                             <ul class="nav-add clearfix">
-                                <li class="nav-add-item"><a class="nav-add-link links-main" href="#">Cart<span
+                                <li class="nav-add-item"><a class="nav-add-link links-main" href="../pages/cart.html">Cart<span
                                         class="badge-menu">(53)</span></a>
 
                             </ul>
