--- a/pages/cart.html
+++ b/pages/cart.html
@@ -69,13 +69,12 @@
                 <h4 class="header-main">Your Cart</h4>
             </div>
             <div class="row">
-                <div class="product-section-wrap clearfix">
-                    <ul class="cart-list">
-                        <li class="cart-item">
+                <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                    <div class="widgets-wrap">
+                        <ul id='list_id' class="widgets-list">
 
-                        </li>
-                    </ul>
-
+                        </ul>
+                    </div>
                 </div>
 
             </div>
@@ -84,7 +83,8 @@
         <div class="footer-push"></div>
     </section>
 
-    <script src="../scripts/showItem.js"></script>
+
+    <script src="../scripts/cartAction.js"></script>
     <footer class="footer">
         <div class="footer_inner">
             <div class="row">
