--- a/pages/cart.html
+++ b/pages/cart.html
@@ -58,7 +58,7 @@
                     <div class="col-lg-2">
                         <div class="nav-add-cart-wrap" >
                             <ul class="nav-add clearfix">
-                                <li class="nav-add-item"><a class="nav-add-link links-main" href="#">Cart<span class="badge-menu">(53)</span></a>
+                                <li class="nav-add-item"><a class="nav-add-link links-main" href="#">Cart<span id='cartCountId' class="badge-menu"></span></a>
 
                             </ul>
                         </div>
@@ -85,6 +85,8 @@
 
 
     <script src="../scripts/cartAction.js"></script>
+    <script src="../scripts/cartOperations.js"></script>
+
     <footer class="footer">
         <div class="footer_inner">
             <div class="row">
