--- a/pages/phone.html
+++ b/pages/phone.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -67,8 +67,7 @@
                     <div class="col-lg-2">
                         <div class="nav-add-cart-wrap">
                             <ul class="nav-add clearfix">
-                                <li class="nav-add-item"><a class="nav-add-link links-main" href="../pages/cart.html">Cart<span
-                                        class="badge-menu">(53)</span></a>
+                                <li class="nav-add-item"><a class="nav-add-link links-main" href="../pages/cart.html">Cart<span id='cartCountId' class="badge-menu"></span></a>
 
                             </ul>
                         </div>
@@ -227,6 +226,7 @@
 
 <script src="../scripts/showItem.js"></script>
 <script src="../scripts/addItem.js"></script>
+<script src="../scripts/cartOperations.js"></script>
 
 <footer class="footer">
     <div class="footer_inner">
