refactoring showItem fn

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -83,7 +83,7 @@
         <div class="footer-push"></div>
     </section>
 
-
+    <script src="../scripts/basic.js"></script>
     <script src="../scripts/cartAction.js"></script>
     <script src="../scripts/cartOperations.js"></script>
 
