--- a/pages/phone.html
+++ b/pages/phone.html
@@ -224,6 +224,7 @@
     <div class="footer-push"></div>
 </section>
 
+<script src="../scripts/basic.js"></script>
 <script src="../scripts/showItem.js"></script>
 <script src="../scripts/addItem.js"></script>
 <script src="../scripts/cartOperations.js"></script>
