--- a/pages/cart.html
+++ b/pages/cart.html
@@ -84,6 +84,7 @@
     </section>
 
     <script src="../scripts/basic.js"></script>
+    <script src="../scripts/localStorageSave.js"></script>
     <script src="../scripts/cartAction.js"></script>
     <script src="../scripts/cartOperations.js"></script>
 
