--- a/pages/phone.html
+++ b/pages/phone.html
@@ -225,6 +225,7 @@
 </section>
 
 <script src="../scripts/basic.js"></script>
+<script src="../scripts/localStorageSave.js"></script>
 <script src="../scripts/showItem.js"></script>
 <script src="../scripts/addItem.js"></script>
 <script src="../scripts/cartOperations.js"></script>
