--- a/pages/registration.html
+++ b/pages/registration.html
@@ -32,7 +32,7 @@
     </header>
 
     <main class="main">
-        <form class="registr-form clearfix" role="form" name="registration">
+        <form  class="registr-form clearfix" role="form" name="registration">
             <div class="row">
                 <label class="col-lg-12 r-title">Registration data:</label>
             </div>
@@ -119,6 +119,8 @@
     <div class="footer-push"></div>
 </section>
 
+<script src="../scripts/basic.js"></script>
+<script src="../scripts/localStorageSave.js"></script>
 <script src="../scripts/registration.js"></script>
 <footer class="footer">
     <div class="footer_inner">
