--- a/pages/registration.html
+++ b/pages/registration.html
@@ -120,8 +120,10 @@
 </section>
 
 <script src="../scripts/basic.js"></script>
-<script src="../scripts/localStorageSave.js"></script>
 <script src="../scripts/registration.js"></script>
+<script src="../scripts/access.js"></script>
+<script src="../scripts/localStorageSave.js"></script>
+
 <footer class="footer">
     <div class="footer_inner">
         <div class="row">
